Changed github accounts
No changes in the project. Only the github account was changed due to space unavailability and also the pro feature in the new account.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # This .gitignore file should be placed at the root of your Unity project directory
 #
-# Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+/.[Vv]scode/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
@@ -9,6 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/[Aa]ssets/[Pp]ackages/*/
+# The above line ignores the subfolders but does not ignore files (meta files)
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
